added backend lg

--- a/assets/notebooks/2-langchain-v1-mcp-agent.ipynb
+++ b/assets/notebooks/2-langchain-v1-mcp-agent.ipynb
@@ -3,7 +3,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# LangChain Agents and Llama Stack with MCP Tools\n\nThis notebook demonstrates **LangChain 1.0** integration with **Llama Stack** responses API using proper **MCP (Model Context Protocol) adapters** for client-side tool execution.\n\n## Configuration\n\nThis notebook uses environment variables from `.env` file in the project root.\nCreate your own `.env` file based on `.env.example`.\n\n## Architecture\n\n```\n┌─────────────────────────────────────────────┐\n│         LangChain 1.0 Agent                 │\n│         (create_agent)                      │\n└────────┬────────────────────┬───────────────┘\n         │                    │\n         │ Model Calls        │ Tool Execution\n         ▼                    ▼\n┌─────────────────┐   ┌──────────────────────┐\n│  Llama Stack    │   │  MCP Client          │\n│  (OpenAI API)   │   │  (langchain-mcp)     │\n│  - vLLM         │   │  - SSE Transport     │\n│  - Llama 3.2    │   │  - Tool Adapters     │\n└─────────────────┘   └──────┬───────────────┘\n                             │\n                             ▼\n                      ┌──────────────┐\n                      │ MCP Server   │\n                      │ (Weather)    │\n                      └──────────────┘\n```"
+   "source": [
+    "# LangChain Agents and Llama Stack with MCP Tools\n",
+    "\n",
+    "This notebook demonstrates **LangChain 1.0** integration with **Llama Stack** responses API using proper **MCP (Model Context Protocol) adapters** for client-side tool execution.\n",
+    "\n",
+    "## Configuration\n",
+    "\n",
+    "This notebook uses environment variables from `.env` file in the project root.\n",
+    "Create your own `.env` file based on `.env.example`.\n",
+    "\n",
+    "## Architecture\n",
+    "\n",
+    "```\n",
+    "┌─────────────────────────────────────────────┐\n",
+    "│         LangChain 1.0 Agent                 │\n",
+    "│         (create_agent)                      │\n",
+    "└────────┬────────────────────┬───────────────┘\n",
+    "         │                    │\n",
+    "         │ Model Calls        │ Tool Execution\n",
+    "         ▼                    ▼\n",
+    "┌─────────────────┐   ┌──────────────────────┐\n",
+    "│  Llama Stack    │   │  MCP Client          │\n",
+    "│  (OpenAI API)   │   │  (langchain-mcp)     │\n",
+    "│  - vLLM         │   │  - SSE Transport     │\n",
+    "│  - Llama 3.2    │   │  - Tool Adapters     │\n",
+    "└─────────────────┘   └──────┬───────────────┘\n",
+    "                             │\n",
+    "                             ▼\n",
+    "                      ┌──────────────┐\n",
+    "                      │ MCP Server   │\n",
+    "                      │ (Weather)    │\n",
+    "                      └──────────────┘\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -16,19 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.12 -m pip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip3 install -q \"langchain>=1.0\" \"langchain-openai>=0.3.32\" \"langchain-core>=0.3.75\" \"langchain-mcp-adapters>=0.1.0\""
    ]
@@ -45,7 +68,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Core imports\nimport os\nimport sys\nimport asyncio\nfrom pathlib import Path\nfrom pprint import pprint\nfrom dotenv import load_dotenv\n\n# LangChain 1.0 imports\nfrom langchain.agents import create_agent\nfrom langchain_openai import ChatOpenAI\n\n# MCP Adapters for client-side tool execution\nfrom langchain_mcp_adapters.client import MultiServerMCPClient\n\n# Load environment variables from project root\nproject_root = Path.cwd().parent.parent if 'assets/notebooks' in str(Path.cwd()) else Path.cwd()\nenv_path = project_root / '.env'\nload_dotenv(env_path)\n\nprint(f\"📁 Loading environment from: {env_path}\")\nprint(f\"✅ .env file {'found' if env_path.exists() else 'NOT FOUND'}\")\nprint(\"✅ All dependencies imported successfully\")"
+   "source": [
+    "# Core imports\n",
+    "import os\n",
+    "import sys\n",
+    "import asyncio\n",
+    "from pathlib import Path\n",
+    "from pprint import pprint\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# LangChain 1.0 imports\n",
+    "from langchain.agents import create_agent\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "# MCP Adapters for client-side tool execution\n",
+    "from langchain_mcp_adapters.client import MultiServerMCPClient\n",
+    "\n",
+    "# Load environment variables from project root\n",
+    "project_root = Path.cwd().parent.parent if 'assets/notebooks' in str(Path.cwd()) else Path.cwd()\n",
+    "env_path = project_root / '.env'\n",
+    "load_dotenv(env_path)\n",
+    "\n",
+    "print(f\"📁 Loading environment from: {env_path}\")\n",
+    "print(f\"✅ .env file {'found' if env_path.exists() else 'NOT FOUND'}\")\n",
+    "print(\"✅ All dependencies imported successfully\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,7 +108,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# === Llama Stack Configuration ===\n# Load from environment variables\nLLAMA_STACK_OPENAI_ENDPOINT = os.getenv(\"LLAMA_STACK_OPENAI_ENDPOINT\")\nINFERENCE_MODEL = os.getenv(\"INFERENCE_MODEL\")\nAPI_KEY = os.getenv(\"API_KEY\", \"fake\")\n\nprint(\"🌐 Llama Stack Configuration:\")\nprint(f\"   Endpoint using Responses API: {LLAMA_STACK_OPENAI_ENDPOINT}\")\nprint(f\"   Model: {INFERENCE_MODEL}\")\n\n# Create ChatOpenAI client pointing to Llama Stack\nllm = ChatOpenAI(\n    model=INFERENCE_MODEL,\n    api_key=API_KEY,\n    base_url=LLAMA_STACK_OPENAI_ENDPOINT,\n    temperature=0.0,\n)\n\nprint(\"\\n🧪 Testing connectivity...\")\ntry:\n    response = llm.invoke(\"Say 'Connection successful' if you can read this.\")\n    print(f\"📥 LLM Response: {response.content}\")\n    print(f\"📥 LLM Response metadata: {response.response_metadata}\")\n    print(\"✅ Llama Stack connection successful!\")\nexcept Exception as e:\n    print(f\"❌ Connection failed: {e}\")\n    sys.exit(1)"
+   "source": [
+    "# === Llama Stack Configuration ===\n",
+    "# Load from environment variables\n",
+    "LLAMA_STACK_OPENAI_ENDPOINT = os.getenv(\"LLAMA_STACK_OPENAI_ENDPOINT\")\n",
+    "INFERENCE_MODEL = os.getenv(\"INFERENCE_MODEL\")\n",
+    "API_KEY = os.getenv(\"API_KEY\", \"fake\")\n",
+    "\n",
+    "print(\"🌐 Llama Stack Configuration:\")\n",
+    "print(f\"   Endpoint using Responses API: {LLAMA_STACK_OPENAI_ENDPOINT}\")\n",
+    "print(f\"   Model: {INFERENCE_MODEL}\")\n",
+    "\n",
+    "# Create ChatOpenAI client pointing to Llama Stack\n",
+    "llm = ChatOpenAI(\n",
+    "    model=INFERENCE_MODEL,\n",
+    "    api_key=API_KEY,\n",
+    "    base_url=LLAMA_STACK_OPENAI_ENDPOINT,\n",
+    "    temperature=0.0,\n",
+    ")\n",
+    "\n",
+    "print(\"\\n🧪 Testing connectivity...\")\n",
+    "try:\n",
+    "    response = llm.invoke(\"Say 'Connection successful' if you can read this.\")\n",
+    "    print(f\"📥 LLM Response: {response.content}\")\n",
+    "    print(f\"📥 LLM Response metadata: {response.response_metadata}\")\n",
+    "    print(\"✅ Llama Stack connection successful!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Connection failed: {e}\")\n",
+    "    sys.exit(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,7 +152,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# === MCP Client Configuration ===\nfrom langchain_mcp_adapters.client import MultiServerMCPClient\n\n# Load MCP server URL from environment\nMCP_WEATHER_SERVER_URL = os.getenv(\"MCP_WEATHER_SERVER_URL\")\n\nprint(\"🛠️  Configuring MCP client...\\n\")\nprint(f\"🌦️  MCP Server URL: {MCP_WEATHER_SERVER_URL}\")\n\n# Step 1: Create the MCP client\nclient = MultiServerMCPClient({\n    \"weather\": {\n        \"transport\": \"sse\",\n        \"url\": MCP_WEATHER_SERVER_URL,\n    }\n})\n\n# Step 2: Get tools from the MCP server (async -> await)\ntools = await client.get_tools()\n\n# Step 3: Show what we got\nprint(f\"\\n📦 Loaded {len(tools)} tools from MCP server:\")\nfor tool in tools:\n    print(f\"   - {tool.name}: {tool.description}\")\n\nprint(\"\\n✅ MCP tools configured successfully!\")\n\n# We keep 'client' alive so tools can work later\nmcp_client = client"
+   "source": [
+    "# === MCP Client Configuration ===\n",
+    "from langchain_mcp_adapters.client import MultiServerMCPClient\n",
+    "\n",
+    "# Load MCP server URL from environment\n",
+    "MCP_WEATHER_SERVER_URL = os.getenv(\"MCP_WEATHER_SERVER_URL\")\n",
+    "\n",
+    "print(\"🛠️  Configuring MCP client...\\n\")\n",
+    "print(f\"🌦️  MCP Server URL: {MCP_WEATHER_SERVER_URL}\")\n",
+    "\n",
+    "# Step 1: Create the MCP client\n",
+    "client = MultiServerMCPClient({\n",
+    "    \"weather\": {\n",
+    "        \"transport\": \"sse\",\n",
+    "        \"url\": MCP_WEATHER_SERVER_URL,\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "# Step 2: Get tools from the MCP server (async -> await)\n",
+    "tools = await client.get_tools()\n",
+    "\n",
+    "# Step 3: Show what we got\n",
+    "print(f\"\\n📦 Loaded {len(tools)} tools from MCP server:\")\n",
+    "for tool in tools:\n",
+    "    print(f\"   - {tool.name}: {tool.description}\")\n",
+    "\n",
+    "print(\"\\n✅ MCP tools configured successfully!\")\n",
+    "\n",
+    "# We keep 'client' alive so tools can work later\n",
+    "mcp_client = client"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,24 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🤖 Creating LangChain agent...\n",
-      "\n",
-      "✅ Agent created successfully!\n",
-      "\n",
-      "📊 Agent Configuration:\n",
-      "   Model: maas/Llama-4-Scout-17B-16E-W4A16\n",
-      "   Tools: 1 MCP tools available\n",
-      "   Framework: LangChain 1.0 (create_agent)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Create Agent using LangChain v1.0 ===\n",
     "print(\"🤖 Creating LangChain agent...\\n\")\n",
@@ -147,125 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "============================================================\n",
-      "🚀 Testing LangChain 1.0 Agent with MCP Tools\n",
-      "============================================================\n",
-      "\n",
-      "👤 User: What is the weather in Miami?\n",
-      "\n",
-      "🤖 Agent Execution Trace:\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      "👤 Human: What is the weather in Miami?\n",
-      "\n",
-      "🤖 AI (Tool Call):\n",
-      "   Tool Calling: getforecast\n",
-      "   Args: {'latitude': '25.7617', 'longitude': '-80.1918'}\n",
-      "\n",
-      "🛠️  Tool Result: Forecast for 25.7617, -80.1918:\n",
-      "\n",
-      "Tonight:\n",
-      "Temperature: 76°F\n",
-      "Wind: 6 mph S\n",
-      "Slight Chance Showers And Thunderstorms\n",
-      "---\n",
-      "Tuesday:\n",
-      "Temperature: 86°F\n",
-      "Wind: 5 to 8 mph N\n",
-      "Sunny\n",
-      "---\n",
-      "Tuesday Night:\n",
-      "Temperature: 75°F\n",
-      "Wind: 10 mph N\n",
-      "Partly Cloudy\n",
-      "---\n",
-      "Wednesday:\n",
-      "Temperature: 84°F\n",
-      "Wind: 10 mph N\n",
-      "Sunny\n",
-      "---\n",
-      "Wednesday Night:\n",
-      "Temperature: 71°F\n",
-      "Wind: 9 to 13 mph NW\n",
-      "Mostly Clear\n",
-      "---\n",
-      "Thursday:\n",
-      "Temperature: 81°F\n",
-      "Wind: 13 to 16 mph NW\n",
-      "Mostly Sunny\n",
-      "---\n",
-      "Thursday Night:\n",
-      "Temperature: 66°F\n",
-      "Wind: 10 to 15 mph NW\n",
-      "Mostly Clear\n",
-      "---\n",
-      "Friday:\n",
-      "Temperature: 77°F\n",
-      "Wind: 7 to 10 mph N\n",
-      "Sunny\n",
-      "---\n",
-      "Friday Night:\n",
-      "Temperature: 67°F\n",
-      "Wind: 7 mph N\n",
-      "Mostly Clear\n",
-      "---\n",
-      "Saturday:\n",
-      "Temperature: 79°F\n",
-      "Wind: 7 mph NE\n",
-      "Sunny\n",
-      "---\n",
-      "Saturday Night:\n",
-      "Temperature: 69°F\n",
-      "Wind: 7 mph NE\n",
-      "Mostly Clear\n",
-      "---\n",
-      "Sunday:\n",
-      "Temperature: 81°F\n",
-      "Wind: 7 to 10 mph NW\n",
-      "Sunny\n",
-      "---\n",
-      "Sunday Night:\n",
-      "Temperature: 70°F\n",
-      "Wind: 10 mph NW\n",
-      "Mostly Clear\n",
-      "---\n",
-      "Monday:\n",
-      "Temperature: 82°F\n",
-      "Wind: 12 mph N\n",
-      "Sunny\n",
-      "---\n",
-      "\n",
-      "🤖 AI: The current weather in Miami is not provided, but the forecast is as follows:\n",
-      "\n",
-      "- Tonight: Slight chance of showers and thunderstorms, temperature 76°F, wind 6 mph S.\n",
-      "- Tuesday: Sunny, temperature 86°F, wind 5 to 8 mph N.\n",
-      "- Tuesday Night: Partly cloudy, temperature 75°F, wind 10 mph N.\n",
-      "- Wednesday: Sunny, temperature 84°F, wind 10 mph N.\n",
-      "- Wednesday Night: Mostly clear, temperature 71°F, wind 9 to 13 mph NW.\n",
-      "- Thursday: Mostly sunny, temperature 81°F, wind 13 to 16 mph NW.\n",
-      "- Thursday Night: Mostly clear, temperature 66°F, wind 10 to 15 mph NW.\n",
-      "- Friday: Sunny, temperature 77°F, wind 7 to 10 mph N.\n",
-      "- Friday Night: Mostly clear, temperature 67°F, wind 7 mph N.\n",
-      "- Saturday: Sunny, temperature 79°F, wind 7 mph NE.\n",
-      "- Saturday Night: Mostly clear, temperature 69°F, wind 7 mph NE.\n",
-      "- Sunday: Sunny, temperature 81°F, wind 7 to 10 mph NW.\n",
-      "- Sunday Night: Mostly clear, temperature 70°F, wind 10 mph NW.\n",
-      "- Monday: Sunny, temperature 82°F, wind 12 mph N.\n",
-      "\n",
-      "============================================================\n",
-      "✅ Query completed successfully!\n",
-      "============================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Test Agent ===\n",
     "from langchain_core.messages import HumanMessage, AIMessage, ToolMessage\n",
