added minor tweaks

--- a/assets/notebooks/1.1-llama-stack-agent-rag-responses.ipynb
+++ b/assets/notebooks/1.1-llama-stack-agent-rag-responses.ipynb
@@ -248,9 +248,11 @@
     "vector_store = client.vector_stores.create(\n",
     "    name=\"parasol_earnings_fy2025\",\n",
     "    file_ids=file_ids,\n",
-    "    #embedding_model=\"sentence-transformers/all-MiniLM-L6-v2\",\n",
-    "    #embedding_dimension=384,\n",
-    "    #provider_id=\"milvus\"\n",
+    "    # extra_body={\n",
+    "    #     \"embedding_model\": \"sentence-transformers/all-MiniLM-L6-v2\",\n",
+    "    #     \"embedding_dimension\": 384,\n",
+    "    #     \"provider_id\": \"milvus\"\n",
+    "    # }\n",
     ")\n",
     "\n",
     "print(\"✅ Vector store created successfully!\")\n",
