--- a/assets/notebooks/3-crewai-mcp-agent.ipynb
+++ b/assets/notebooks/3-crewai-mcp-agent.ipynb
@@ -262,9 +262,11 @@
     "vector_store = client.vector_stores.create(\n",
     "    name=\"acme_docs\",\n",
     "    file_ids=file_ids,  # Use uploaded file IDs\n",
-    "    #embedding_model=\"sentence-transformers/all-MiniLM-L6-v2\",\n",
-    "    #embedding_dimension=384,\n",
-    "    #provider_id=\"milvus\" # Use Milvus as the vector store provider\n",
+    "    # extra_body={\n",
+    "    #     \"embedding_model\": \"sentence-transformers/all-MiniLM-L6-v2\",\n",
+    "    #     \"embedding_dimension\": 384,\n",
+    "    #     \"provider_id\": \"milvus\"\n",
+    "    # }\n",
     ")\n",
     "\n",
     "print(f\"✅ Vector store created successfully!\")\n",
