LLS agents for fantaco

--- a/assets/notebooks/1-llama-stack-agent-responses.ipynb
+++ b/assets/notebooks/1-llama-stack-agent-responses.ipynb
@@ -48,12 +48,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1f525a33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: llama-stack-client==0.3.1 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (0.3.1)\n",
+      "Requirement already satisfied: python-dotenv in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (1.2.1)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (4.12.0)\n",
+      "Requirement already satisfied: click in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (8.3.1)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (1.9.0)\n",
+      "Requirement already satisfied: fire in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (0.7.1)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (0.28.1)\n",
+      "Requirement already satisfied: pandas in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (2.3.3)\n",
+      "Requirement already satisfied: prompt-toolkit in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (3.0.52)\n",
+      "Requirement already satisfied: pyaml in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (25.7.0)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (2.12.5)\n",
+      "Requirement already satisfied: requests in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (2.32.5)\n",
+      "Requirement already satisfied: rich in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (14.2.0)\n",
+      "Requirement already satisfied: sniffio in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (1.3.1)\n",
+      "Requirement already satisfied: termcolor in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (3.2.0)\n",
+      "Requirement already satisfied: tqdm in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.7 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from llama-stack-client==0.3.1) (4.15.0)\n",
+      "Requirement already satisfied: idna>=2.8 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from anyio<5,>=3.5.0->llama-stack-client==0.3.1) (3.11)\n",
+      "Requirement already satisfied: certifi in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from httpx<1,>=0.23.0->llama-stack-client==0.3.1) (2025.11.12)\n",
+      "Requirement already satisfied: httpcore==1.* in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from httpx<1,>=0.23.0->llama-stack-client==0.3.1) (1.0.9)\n",
+      "Requirement already satisfied: h11>=0.16 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->llama-stack-client==0.3.1) (0.16.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from pydantic<3,>=1.9.0->llama-stack-client==0.3.1) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.41.5 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from pydantic<3,>=1.9.0->llama-stack-client==0.3.1) (2.41.5)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.2 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from pydantic<3,>=1.9.0->llama-stack-client==0.3.1) (0.4.2)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from pandas->llama-stack-client==0.3.1) (2.3.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from pandas->llama-stack-client==0.3.1) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from pandas->llama-stack-client==0.3.1) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from pandas->llama-stack-client==0.3.1) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from python-dateutil>=2.8.2->pandas->llama-stack-client==0.3.1) (1.17.0)\n",
+      "Requirement already satisfied: wcwidth in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from prompt-toolkit->llama-stack-client==0.3.1) (0.2.14)\n",
+      "Requirement already satisfied: PyYAML in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from pyaml->llama-stack-client==0.3.1) (6.0.3)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from requests->llama-stack-client==0.3.1) (3.4.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from requests->llama-stack-client==0.3.1) (2.5.0)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from rich->llama-stack-client==0.3.1) (4.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from rich->llama-stack-client==0.3.1) (2.19.2)\n",
+      "Requirement already satisfied: mdurl~=0.1 in /home/bluesman/git/byo-agentic-framework/.venv/lib64/python3.13/site-packages (from markdown-it-py>=2.2.0->rich->llama-stack-client==0.3.1) (0.1.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install -q \"llama-stack-client==0.3.0\" \"python-dotenv\""
+    "%pip install  \"llama-stack-client==0.3.1\" \"python-dotenv\""
    ]
   },
   {
@@ -66,10 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "jsl1ilhed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 Loading environment from: /home/bluesman/git/byo-agentic-framework/assets/notebooks/.env\n",
+      "✅ .env file FOUND and loaded\n",
+      "\n",
+      "🐍 Python: /home/bluesman/git/byo-agentic-framework/.venv/bin/python\n",
+      "✅ Using virtual environment - CORRECT!\n"
+     ]
+    }
+   ],
    "source": [
     "# Core imports\n",
     "import os\n",
@@ -119,10 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d13094af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🌐 Llama Stack Configuration:\n",
+      "   Base URL: http://localhost:8321/\n",
+      "   OpenAI Endpoint: http://localhost:8321/v1\n",
+      "✅ Llama Stack client created\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_stack_client import LlamaStackClient\n",
     "\n",
@@ -151,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "48255cbb",
    "metadata": {},
    "outputs": [],
@@ -194,9 +261,9 @@
    "source": [
     "# Configuration\n",
     "INFERENCE_MODEL = os.getenv(\"INFERENCE_MODEL\")\n",
-    "MCP_WEATHER_SERVER_URL = os.getenv(\"MCP_WEATHER_SERVER_URL\")\n",
+    "MCP_WEATHER_SERVER_URL = os.getenv(\"MCP_CUSTOMER_SERVER_URL\")\n",
     "\n",
-    "EXAMPLE_PROMPT = \"What is the longest river in Spain?\"\n",
+    "EXAMPLE_PROMPT = \"Give me list of customers of Fantaco company\"\n",
     "\n",
     "print(f\"🤖 Model: {INFERENCE_MODEL}\")\n",
     "print(f\"💬 Prompt: {EXAMPLE_PROMPT}\\n\")\n",
@@ -253,19 +320,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a75f3d16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🤖 Model: ollama/llama3.2:3b\n",
+      "🌦️  MCP Server: https://mcp-customer-route-nvinto-dev.apps.rm3.7wse.p1.openshiftapps.com/mcp\n",
+      "💬 Prompt: Search customer with name Anabela Domingues\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://localhost:8321/v1/responses \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🤖 Agent Execution Trace:\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "[Output 1] Type: mcp_list_tools\n",
+      "  Server: customer\n",
+      "  Tools available: ['search_customers', 'get_customer']\n",
+      "\n",
+      "[Output 2] Type: mcp_call\n",
+      "  Tool called: search_customers\n",
+      "  Arguments: {\"contact_name\":\"Anabela Domingues\"}\n",
+      "  Result: {\"results\":[{\"customerId\":\"TRADH\",\"companyName\":\"Tradição Hipermercados\",\"contactName\":\"Anabela Domingues\",\"contactTitle\":\"Sales Representative\",\"address\":\"Av. Inês de Castro, 414\",\"city\":\"Sao Paulo\",...\n",
+      "\n",
+      "[Output 3] Type: message\n",
+      "  Role: assistant\n",
+      "  Content: The customer Anabela Domingues was found in the system database. Here is a summary of the information we have:\n",
+      "\n",
+      "* Name: Anabela Domingues\n",
+      "* Company: Tradição Hipermercados\n",
+      "* Contact Position: Sales Representative\n",
+      "* Address: Av. Inês de Castro, 414, Sao Paulo, SP, 05634-030, Brazil\n",
+      "* Phone Number: (11) 555-2167\n",
+      "* Fax Number: (11) 555-2168\n",
+      "* Email: anabeladomingues@example.com\n",
+      "\n",
+      "Would you like to know anything else about the customer or perform further actions?\n",
+      "\n",
+      "================================================================================\n",
+      "FINAL RESPONSE:\n",
+      "================================================================================\n",
+      "The customer Anabela Domingues was found in the system database. Here is a summary of the information we have:\n",
+      "\n",
+      "* Name: Anabela Domingues\n",
+      "* Company: Tradição Hipermercados\n",
+      "* Contact Position: Sales Representative\n",
+      "* Address: Av. Inês de Castro, 414, Sao Paulo, SP, 05634-030, Brazil\n",
+      "* Phone Number: (11) 555-2167\n",
+      "* Fax Number: (11) 555-2168\n",
+      "* Email: anabeladomingues@example.com\n",
+      "\n",
+      "Would you like to know anything else about the customer or perform further actions?\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuration\n",
     "INFERENCE_MODEL = os.getenv(\"INFERENCE_MODEL\")\n",
-    "MCP_WEATHER_SERVER_URL = os.getenv(\"MCP_WEATHER_SERVER_URL\")\n",
+    "MCP_CUSTOMER_SERVER_URL = os.getenv(\"MCP_CUSTOMER_SERVER_URL\")\n",
     "\n",
-    "EXAMPLE_PROMPT = \"What is the weather in Boston? Use the the best tool for the available tools.\"\n",
+    "EXAMPLE_PROMPT = \"Search customer with name Anabela Domingues\"\n",
     "\n",
     "print(f\"🤖 Model: {INFERENCE_MODEL}\")\n",
-    "print(f\"🌦️  MCP Server: {MCP_WEATHER_SERVER_URL}\")\n",
+    "print(f\"🌦️  MCP Server: {MCP_CUSTOMER_SERVER_URL}\")\n",
     "print(f\"💬 Prompt: {EXAMPLE_PROMPT}\\n\")\n",
     "\n",
     "# Use Llama Stack's Responses API\n",
@@ -275,8 +406,8 @@
     "    tools=[\n",
     "        {\n",
     "            \"type\": \"mcp\",  # Server-side MCP\n",
-    "            \"server_url\": MCP_WEATHER_SERVER_URL,\n",
-    "            \"server_label\": \"weather\",\n",
+    "            \"server_url\": MCP_CUSTOMER_SERVER_URL,\n",
+    "            \"server_label\": \"customer\",\n",
     "        }\n",
     "    ],\n",
     ")\n",
@@ -386,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "byo-agentic-framework",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
